<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.13">
  <DUT Name="stLoadCell_InOutsData" Id="{754ada77-e1e6-0360-0cf8-a40d512be621}">
    <Declaration><![CDATA[TYPE stLoadCell_InOutsData :
STRUCT
	wStatus		AT %I* : WORD;	// .1-Overrange, .3-Data invalid, .6-Error, .7-Calib in progress, .9-Steady state, .13-SyncErr, .15-TxPDO_Toggle
	rValue		AT %I* : REAL;	// Wartość siły w [N]
	wControl	AT %Q* : WORD;	// .0-Start calibration, .1-Disable calib., .2-InputFreeze, .4-Tara
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>